--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,12 @@
 *.pem
 
 # debug
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+firebase-debug.log*
+firebase-debug.*.log*
 
 # local env files
 .env*.local
